--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "lint": "eslint . --ext .ts",
     "start": "node --require source-map-support/register ./dist",
     "start:dotenv": "node --require source-map-support/register --require dotenv/config ./dist",
-    "start:dev": "node --require source-map-support/register --require dotenv/config ./dist | pino-pretty",
+    "start:dev": "NODE_ENV=development node --require source-map-support/register --require dotenv/config ./dist | pino-pretty",
     "start:redis": "docker run -p 6379:6379 --name fabric-sample-redis -d redis --maxmemory-policy noeviction --requirepass \"${REDIS_PASSWORD}\"",
     "test": "jest"
   },
